test/error/OpAddAssignStringObjectStg.fu
public class Test
{
	public static bool Run()
	{
		Test() o;
		string() s = "o=";
		s += o; //ERROR: Cannot coerce Test() to string
		return true;
	}
}
